@@ -77,6 +77,7 @@
     text-decoration: none;
     display: block;
 
+    &:hover,
     &.has-focus {
       background: var(--autocomplete-focus-bg);
     }
