@@ -1,6 +1,7 @@
 Revision history for perl distribution Convos
 
 7.03 Not Released
+ - Changed chat input menu to be visible on big screens
  - Updated FontAwesome to 5.15.4
  - Updated Node dependencies
 
